--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,15 @@
 fastapi
 uvicorn
-websockets
-ccxt
 psycopg2
 redis
+ccxt
 pandas
-xgboost
+numpy
 scikit-learn
+xgboost
 joblib
-sqlalchemy
+websockets
+ta
+dotenv
+pytest
+requests
